--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,73 @@
 <resources>
     <string name="app_name">Stack Game</string>
+    <string name="loading">Loading...</string>
+    
+    <!-- Onboarding -->
+    <string name="onboarding_title">Stack Game</string>
+    <string name="onboarding_p1_title">Stack to the Stars</string>
+    <string name="onboarding_p1_desc">Build the highest tower possible by perfectly aligning blocks.</string>
+    <string name="onboarding_p2_title">Master Physics</string>
+    <string name="onboarding_p2_desc">Watch your balance! Realistic physics make every block crucial.</string>
+    <string name="onboarding_p3_title">Ready to Play?</string>
+    <string name="onboarding_login_btn">Login</string>
+    <string name="onboarding_guest_btn">Play as Guest</string>
+    <string name="onboarding_next_btn">Next</string>
+    
+    <!-- Login -->
+    <string name="login_title">Login</string>
+    <string name="login_email_label">Email</string>
+    <string name="login_btn">Login</string>
+    <string name="login_back_desc">Back</string>
+    <string name="login_create_account">No account?</string>
+    
+    <!-- Profile -->
+    <string name="profile_title">Profile</string>
+    <string name="profile_purchase_btn">⭐ Go Premium</string>
+    <string name="profile_back_desc">Back</string>
+
+    <!-- Purchase -->
+    <string name="purchase_title">Buy Premium</string>
+    <string name="purchase_header">Enhance your Experience</string>
+    <string name="purchase_premium_title">Premium</string>
+    <string name="purchase_ultra_title">Ultra</string>
+    <string name="purchase_current_level">Current Level</string>
+    <string name="purchase_owned">Purchased</string>
+    <string name="purchase_buy_prefix">Buy %1$s</string>
+    <string name="purchase_feature_ads">No Ads</string>
+    <string name="purchase_feature_ghost">Ghost Feature</string>
+    <string name="purchase_feature_lives_bonus">Bonus Lives</string>
+    <string name="purchase_feature_support">Developer Support</string>
+    <string name="purchase_feature_all_premium">All Premium Features</string>
+    <string name="purchase_feature_rewind">Rewind Feature</string>
+    <string name="purchase_feature_lives_unlimited">Unlimited Lives</string>
+    <string name="purchase_feature_badge">Exclusive Badge</string>
+    <string name="purchase_feature_early_access">Early Access</string>
+
+    <!-- Game / Ad Overlay -->
+    <string name="ad_premium_title">Go PREMIUM!</string>
+    <string name="ad_ultra_title">Go ULTRA!</string>
+    <string name="ad_enjoy_title">Enjoy:</string>
+    <string name="ad_best_title">The Best Level:</string>
+    <string name="ad_remove_message">Ad - Go PREMIUM to remove it</string>
+    <string name="ad_buy_premium_btn">Go Premium - 1€</string>
+    <string name="ad_close_in">Closing in %1$d seconds...</string>
+    <string name="ad_close_now">Maybe Later</string>
+    <string name="ad_close_desc">Close</string>
+    <string name="ad_feature_shadow">✓ Placement Shadow</string>
+    <string name="ad_feature_no_ads">✓ No Ads</string>
+    <string name="ad_feature_lives_4">✓ 4 Lives Max</string>
+    <string name="ad_feature_lives_5">✓ 5 Lives Max</string>
+    <string name="ad_feature_experience">✓ Premium Experience</string>
+    <string name="ad_feature_all_premium">✓ All PREMIUM</string>
+    <string name="ad_feature_rewind">✓ Rewind Function</string>
+    <string name="ad_feature_ultimate">✓ Ultimate Experience</string>
+    <string name="game_over">Game Over, %1$s!</string>
+    <string name="tap_to_restart">TAP TO RESTART</string>
+    <string name="long_press_rewind">LONG PRESS TO REWIND</string>
+    
+    <!-- ViewModel Errors -->
+    <string name="error_user_not_found">User not found</string>
+    <string name="error_no_internet">No internet connection</string>
+    <string name="error_server_down">Server unreachable</string>
+    <string name="error_unknown_prefix">Error: %1$s</string>
 </resources>
