refactor: Extract game logic to GameViewModel and introduce structured login error handling.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -24,6 +24,9 @@
     <string name="profile_title">Profil</string>
     <string name="profile_purchase_btn">⭐ Passer Premium</string>
     <string name="profile_back_desc">Retour</string>
+    <string name="level_normal">Normal</string>
+    <string name="level_premium">Premium</string>
+    <string name="level_ultra">Ultra</string>
 
     <!-- Purchase -->
     <string name="purchase_title">Acheter Premium</string>
