build: Update dependencies, externalize API base URL to build config, and refactor SharedPreferences edit operations.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -28,6 +28,9 @@
     <string name="level_premium">Premium</string>
     <string name="level_ultra">Ultra</string>
 
+    <string name="profile_logout_btn">Se déconnecter</string>
+    <string name="profile_features_title">Vos avantages :</string>
+
     <!-- Purchase -->
     <string name="purchase_title">Acheter Premium</string>
     <string name="purchase_header">Améliorez votre expérience</string>
@@ -66,8 +69,7 @@
     <string name="ad_feature_ultimate">✓ Expérience ultime</string>
     <string name="game_over">Game Over, %1$s!</string>
     <string name="tap_to_restart">APPUYEZ POUR REJOUER</string>
-    <string name="long_press_rewind">MAINTENIR POUR REWIND</string>
-    
+
     <!-- ViewModel Errors -->
     <string name="error_user_not_found">Utilisateur non trouvé</string>
     <string name="error_no_internet">Pas de connexion internet</string>
