--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,10 +69,12 @@
     <string name="ad_feature_ultimate">✓ Ultimate Experience</string>
     <string name="game_over">Game Over, %1$s!</string>
     <string name="tap_to_restart">TAP TO RESTART</string>
+    <string name="celebration_bravo">BRAVO %1$s! 🎉</string>
 
     <!-- ViewModel Errors -->
     <string name="error_user_not_found">User not found</string>
     <string name="error_no_internet">No internet connection</string>
     <string name="error_server_down">Server unreachable</string>
     <string name="error_unknown_prefix">Error: %1$s</string>
+    <string name="ad_banner_text">Ads - Enable PREMIUM to remove it</string>
 </resources>
